<?xml version="1.0"?>
<package format="2">
  <name>restorable_core</name>
  <version>0.0.0</version>
  <description>The restorable_core package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>curl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>curl</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>curl</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
